// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-confirm-dialog Default 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
  >
    <button
      aria-hidden="true"
      class="btn btn--secondary"
    >
      Open Dialog
    </button>
    <p
      aria-hidden="true"
    >
      Some outside content...
    </p>
    <div
      aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      aria-hidden="false"
      data-focus-lock-disabled="false"
    >
      <div
        aria-hidden="false"
      >
        <div
          aria-hidden="false"
          aria-labelledby="dialog-title-abc123"
          arial-modal="true"
          class="confirm-dialog confirm-dialog--mask-fade"
          role="dialog"
        >
          <div
            aria-hidden="true"
            class="keyboard-trap-boundary"
            tabindex="0"
          />
          <div
            aria-hidden="false"
            class="confirm-dialog__window confirm-dialog__window--fade keyboard-trap--active"
          >
            <div
              aria-hidden="true"
              class="keyboard-trap-boundary"
              tabindex="0"
            />
            <div
              class="confirm-dialog__header"
            >
              <h2
                id="dialog-title-abc123"
              >
                Delete Address?
              </h2>
            </div>
            <div
              class="confirm-dialog__main"
              id="confirm-dialog-main"
            >
              <p>
                You will permanently lose this address.
              </p>
            </div>
            <div
              class="confirm-dialog__footer"
            >
              <button
                class="btn confirm-dialog__reject btn--secondary"
              >
                Delete
              </button>
              <button
                aria-describedby="confirm-dialog-main"
                class="btn confirm-dialog__confirm btn--primary"
                id="confirm-dialog-confirm"
              >
                Cancel
              </button>
            </div>
            <div
              aria-hidden="true"
              class="keyboard-trap-boundary"
              tabindex="0"
            />
          </div>
          <div
            aria-hidden="true"
            class="keyboard-trap-boundary"
            tabindex="0"
          />
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</DocumentFragment>
`;

exports[`Storyshots ebay-confirm-dialog With Animation 1`] = `
<DocumentFragment>
  <div>
    <button
      class="btn btn--secondary"
    >
      Open Dialog
    </button>
    <p>
      Some outside content...
    </p>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div>
        <div
          aria-labelledby="dialog-title-abc123"
          arial-modal="true"
          class="confirm-dialog confirm-dialog--mask-fade"
          hidden=""
          role="dialog"
        >
          <div
            class="confirm-dialog__window confirm-dialog__window confirm-dialog__window--fade"
          >
            <div
              class="confirm-dialog__header"
            >
              <h2
                id="dialog-title-abc123"
              >
                Delete Address?
              </h2>
            </div>
            <div
              class="confirm-dialog__main"
              id="confirm-dialog-main"
            >
              <p>
                You will permanently lose this address.
              </p>
            </div>
            <div
              class="confirm-dialog__footer"
            >
              <button
                class="btn confirm-dialog__reject btn--secondary"
              >
                Delete
              </button>
              <button
                aria-describedby="confirm-dialog-main"
                class="btn confirm-dialog__confirm btn--primary"
                id="confirm-dialog-confirm"
              >
                Cancel
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</DocumentFragment>
`;
